--- a/templates/user/inscription.html.twig
+++ b/templates/user/inscription.html.twig
@@ -35,7 +35,7 @@
                 <input type="text" id="username" name="username" autocomplete="off" class="w-56 border border-blue-200 px-4 py-2 rounded" required>
             
                 <label for="email" class="text-xs text-gray-500  mt-4">Email:</label>
-                <input type="email" id="email" name="email" value="@sdea.fr" pattern=".+@sdea\.fr$" autocomplete="off" class="w-56 border border-blue-200 px-4 py-2 rounded" required>
+                <input type="email" id="email" name="email"  autocomplete="off" class="w-56 border border-blue-200 px-4 py-2 rounded" required>
             </div>
         </div>
         <div class="w-full  flex justify-around pt-4">
