--- a/templates/documents/create.html.twig
+++ b/templates/documents/create.html.twig
@@ -209,7 +209,7 @@
                 style: {
                   background: "linear-gradient(to right, #00b09b, #96c93d)",
                 },
-                onClick: function(){} // Callback after click
+                onClick: function(){} 
               }).showToast();
         });
     
